[FIX] Center alignment for logos carousel images

--- a/style.css
+++ b/style.css
@@ -249,7 +249,7 @@ footer .wpforms-container {
   margin: 5px;
   transition: 0.5s;
   height: 100%;
-  display: flex;
+  display: flex !important;
   justify-content: center;
   align-items: center;
 }
